2002-05-29  Han-Wen  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (TabStaffContext): 
	enable TabStaff by default.

	*  Tablature support by Jean-Baptiste Lamy <jiba@@tuxfamily.org>

2002-05-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* config.hh.in: Remove duplicate DIR_DATADIR entry.

	* aclocal.m4: Regenerate.
	
	* stepmake/aclocal.m4: Append $FULL_VERSION to datadir.

2002-05-25  Heikki Junes  <heikki.junes@hut.fi>

	* lilypond-mode.el: Added Deutsch notes and fixed "Quick notes".

	* lilypond-mode.el: Write notes with fewer keystrokes trough a 
	"Quick notes"-interface.

2002-05-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/non-empty-text.ly: Update example with outdated
	comment.

2002-05-25  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py:  add textNonEmpty rule

	* lily/text-engraver.cc (create_grobs): remove textNonEmpty

2002-05-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/text-item.cc (markup_text2molecule): Junk ugly lookahead by
	using translate-robust add_molecule instead of add_at_edge.
	Bugfix for #(lines (finger "" "1")).

2002-05-24  Han-Wen  <hanwen@cs.uu.nl>

	* lily/stem-tremolo.cc (brew_molecule): clean up and fix stem
	tremolo placement.

2002-05-22  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION: 1.5.58
 	
	* Documentation/user/refman.itely: Bugfix: add node Repeats and
	MIDI.  Regenerate menu.  Fix @end example.

	* lily/accidental.cc: Add cautionary-style to interface.

	* mf/feta-beugel.mf (code): use autometric macros for braces.
	This fixes input/bugs/braces.

	* lily/afm.cc (count): return numOfChars, not size of array
	(always equals 256.)

	* lily/script.cc (before_line_breaking): postpone setting the
	X-parent of vertical scripts. This fixes the case of scripts on
	chords with seconds 

2002-05-21  Han-Wen  <hanwen@cs.uu.nl>

	* scm/grob-description.scm:  fix alignment of barnumber: make sure
	it doesn't hit the G-clef. 

	* input/mozart-hrn3-defs.ly (startGraceMusic): typo (it's