@@ -231,12 +231,10 @@
 
 (define my-eval-in-module eval)
 
-(if (or (equal? (minor-version) "4")
+(if (or (equal? (minor-version) "4.1")
+	(equal? (minor-version) "4")
 	(equal? (minor-version) "3.4"))
-    (begin
-      (set! my-eval-in-module eval-in-module)
-
-    ))
+    (set! my-eval-in-module eval-in-module))
 
 (define-public (pdf-output-expression expr port)
   (display (my-eval-in-module expr this-module) port) )
