@@ -121,7 +121,8 @@
   ""
   )
 
-(if (or (equal? (minor-version) "4")
+(if (or (equal? (minor-version) "4.1")
+	(equal? (minor-version) "4")
 	(equal? (minor-version) "3.4"))
     (define (embedded-ps expr)
       (let ((ps-string
@@ -273,12 +274,10 @@
 
 (define my-eval-in-module eval)
 
-(if (or (equal? (minor-version) "4")
+(if (or (equal? (minor-version) "4.1")
+	(equal? (minor-version) "4")
 	(equal? (minor-version) "3.4"))
-    (begin
-      (set! my-eval-in-module eval-in-module)
-
-    ))
+    (set! my-eval-in-module eval-in-module))
 
 (define-public (tex-output-expression expr port)
   (display (my-eval-in-module expr this-module) port )
